@@ -154,7 +154,7 @@ void startR (char *Rcommand)
 	return;
     }
 
-    build_path(Rprofile, paths.userdir, "gretl.Rprofile", NULL);
+    build_path(Rprofile, paths.dotdir, "gretl.Rprofile", NULL);
     fp = gretl_fopen(Rprofile, "w");
     if (fp == NULL) {
 	errbox(_("Couldn't write R startup file"));
@@ -168,7 +168,7 @@ void startR (char *Rcommand)
 	return;
     } 	
 
-    build_path(Rdata, paths.userdir, "Rdata.tmp", NULL);
+    build_path(Rdata, paths.dotdir, "Rdata.tmp", NULL);
 
     sprintf(Rline, "store \"%s\" -r", Rdata);
     list = command_list_from_string(Rline);
@@ -193,7 +193,7 @@ void startR (char *Rcommand)
 	char Rtmp[MAXLEN];
 	FILE *fq;
 
-	build_path(Rtmp, paths.userdir, "Rtmp", NULL);
+	build_path(Rtmp, paths.dotdir, "Rtmp", NULL);
 	fq = gretl_fopen(Rtmp, "w");
 	if (fq != NULL) {
 	    fputs("# load data from gretl\n", fq);
@@ -825,7 +825,7 @@ void win32_process_graph (GPT_SPEC *spec, int color, int dest)
 
     /* generate gnuplot source file to make emf */
     pprintf(prn, "%s\n", get_gretl_emf_term_line(spec->code, color));
-    emfname = g_strdup_printf("%sgpttmp.emf", paths.userdir);
+    emfname = g_strdup_printf("%sgpttmp.emf", paths.dotdir);
     pprintf(prn, "set output '%s'\n", emfname);
 
     while (fgets(plotline, MAXLEN-1, fq)) {
@@ -958,8 +958,9 @@ void win32_raise_window (GtkWidget *w)
     if (top != NULL && top->window != NULL) {
 	HWND h = GDK_WINDOW_HWND(top->window);
 
-	SetWindowPos(h, HWND_TOPMOST, 0, 0, 0, 0, 
+	SetWindowPos(h, HWND_TOP, 0, 0, 0, 0, /* was HWND_TOPMOST */
 		     SWP_NOMOVE | SWP_NOSIZE);
+	gtk_widget_grab_focus(w);
     }
 }
 
